--- a/deck.html
+++ b/deck.html
@@ -21,20 +21,22 @@
 
 class: center, middle
 
-# Title
+# Group project due September 8, 2017 (Team members: Shareen Lee and Stacy Srivastava)
 
 ---
 
-# Agenda
+# About
 
-1. Introduction
-2. Deep-dive
-3. ...
+1. This slide deck was written in HTML.
+2. The slides themselves were written in Markdown incorporated into the HTML file.
+3. The slides you are seeing are rendered using remark.js <https://remarkjs.com/downloads/remark-latest.min.js>
 
 ---
 
-# Introduction
-
+# Previewing HTML in GitHub
+To display our slides on a web browser, we appended the URL for this HTML file to http://htmlpreview.github.com/?.
+      Is there a better way to preview HTML from within GitHub?
+      
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
