--- a/deck.html
+++ b/deck.html
@@ -21,7 +21,7 @@
 
 class: center, middle
 
-# Group project due September 8, 2017 (Team members: Shareen Lee and Stacy Srivastava)
+# Team members: Shareen Lee and Stacy Srivastava
 
 ---
 
@@ -35,6 +35,7 @@ class: center, middle
 
 # Previewing HTML in GitHub
 To display our slides on a web browser, we appended the URL for this HTML file to http://htmlpreview.github.com/?.
+      
       Is there a better way to preview HTML from within GitHub?
       
     </textarea>
