--- a/deck.html
+++ b/deck.html
@@ -33,7 +33,7 @@ class: center, middle
 
 ---
 
-# Previewing HTML in GitHub
+# Question
 To display our slides on a web browser, we appended the URL for this HTML file to http://htmlpreview.github.com/?.
       
       Is there a better way to preview HTML from within GitHub?
